pom.xml handles modules