@@ -99,6 +99,14 @@
           <configuration>
             <source>17</source>
             <target>17</target>
+            <compilerArgs>
+              <arg>--add-exports</arg>
+              <arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED</arg>
+            </compilerArgs>
           </configuration>
         </plugin>
       </plugins>
